[package]
name = "racers_ledger_lamprey"
version = "0.1.0"
authors = ["Sariya Melody <sariya@sariya.garden>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "3.0.0-beta.2"
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "1.11.0"
tungstenite = "0.13"
url = "2.2.1"
