[package]
name = "racers_ledger_lamprey"
version = "0.1.0"
authors = ["Sariya Melody <sariya@sariya.garden>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
clap = "3.0.0-beta.2"
colored = "2.0.0"
log = "0.4.14"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
simple_logger = "1.11"
tokio = { version = "1", features = ["full"] }
tungstenite = "0.13"
async-tungstenite = { version = "0.13", features = ["tokio-runtime"] }
url = "2.2.2"
futures = "0.3.15"
warp = { version = "0.3.1", features = ["websocket"] }
tokio-stream = { version = "0.1.6", features = ["net"] }
