[package]
name = "racers-ledger-datatypes"
version = "0.1.0"
authors = ["Sariya Melody <sariya@sariya.garden>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
serde = { version = "1.0.126", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }