[package]
name = "racers-ledger-datatypes"
version = "0.1.0"
authors = ["Sariya Melody <sariya@sariya.garden>"]
edition = "2018"
repository = "https://git.sariya.dev/sariya/racers-ledger"

# TODO(sariya): make the crates.io page for this better

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "3.0.0"
serde = { version = "1.0.209", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
