[package]
name = "racers-ledger-lamprey"
version = "0.1.0"
authors = ["Sariya Melody <sariya@sariya.garden>"]
edition = "2018"
repository = "https://git.sariya.dev/sariya/racers-ledger"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "4.5.16", features = [ "derive", "color" ] }
colored = "2.0.0"
log = "0.4.22"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.6.0", features = ["full"] }
tungstenite = "0.23.0"
async-tungstenite = { version = "0.27.0", features = ["tokio-runtime"] }
url = "2.2.2"
futures = "0.3.30"
warp = { version = "0.3.7", features = ["websocket"] }
tokio-stream = { version = "0.1.6", features = ["net"] }
tracing = "0.1.26"
tracing-subscriber = { version = "0.3.0", features = ["ansi", "fmt"] }
racers-ledger-datatypes = { path = "../racers-ledger-datatypes" }
