[package]
name = "racers-ledger-lamprey"
version = "0.1.0"
authors = ["Sariya Melody <sariya@sariya.garden>"]
edition = "2018"
repository = "https://git.sariya.dev/sariya/racers-ledger"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.16", features = [ "derive", "color" ] }
colored = "3.0.0"
log = "0.4.22"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }
tungstenite = "0.24.0"
async-tungstenite = { version = "0.29.0", features = ["tokio-runtime"] }
url = "2.5.2"
futures = "0.3.30"
warp = { version = "0.3.7", features = ["websocket"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["ansi", "fmt"] }
racers-ledger-datatypes = { path = "../racers-ledger-datatypes" }
